apps/ladebugs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladebugs
  labels:
    app.kubernetes.io/name: ladebugs
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ladebugs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ladebugs
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: ladebugs
          image: "clanktron/ladebugs:latest"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "828Mi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
