apps/ladebugs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ladebugs
  labels:
    app.kubernetes.io/name: ladebugs
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: ladebugs
