apps/ladebugs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladebugs
  labels:
    app.kubernetes.io/name: ladebugs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${EXTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "ladebugs.${EXTERNAL_DOMAIN}"
      secretName: "ladebugs-tls"
  rules:
    - host: "ladebugs.${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ladebugs
                port:
                  number: 80
